# sendpp1

./: .gitignore  README.md  README.rst  flake.nix  pyproject.toml
gui/: mainwindow.py  sendpp1.py
gui/ui/: main_window.ui
sendpp1/: machine.py  main.py
sendpp1web/: index.html  package-lock.json  package.json
sendpp1web/src/: App.jsx  pesParser.js  pp1.js
src/sendpp1/core/: commands.py  machine.py  main.py
src/sendpp1/gui/: alltogherdnow.py  machine.py  pp1.py  resisewidget.py  sendpp1.py  svgassignelelements.py  svgwithresize.py  threadlist.py
src/sendpp1/gui/ui/: main_window.ui
src/sendpp1/pyembroidery/: __init__.py  pp1Writer.py  pyembroidery.py
src/sendpp1/tui/: app.py
src/sendpp1/tui/widgets/: __init__.py  log_view.py  machine_status.py  thread_list.py
src/widgets/: interactivepath3.py  interactivepath5.py  intercativepath.py  intercativepath2.py
test/: test.pes  test_machine.py  test_multicolor.pes
wireshark/: sendpp1.lua
