[project]
name = "sendpp1"
version = "0.1.0"
description = "A pp1 job sender"
authors = [{name = "Luca Cristaldi", email = "wifasoi@gmil.com"}]
requires-python = ">=3.8"
dependencies = [
    "bleak>=0.21.1",
    "click>=8.0.0",
    "loguru"
]

[scripts]
bleak-scan = "sendpp1:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
