[project]
name = "sendpp1"
version = "0.1.0"
description = "A pp1 job sender"
authors = [{name = "Luca Cristaldi", email = "wifasoi@gmil.com"}]
requires-python = ">=3.8"
dependencies = [
    "bleak>=0.21.1",
    "click>=8.0.0",
    "loguru",
    "pyembroidery"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[scripts]
sendpp1 = "sendpp1:cli"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
