[project]
name = "sendpp1"
version = "0.1.0"
description = "A pp1 job sender"
authors = [{name = "Luca Cristaldi", email = "wifasoi@gmil.com"}]
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.21.1",
    "click>=8.0.0",
    "loguru",
    "pyembroidery",
    "pyside6",
    "async-property",
    "textual>=0.80.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui"]

[project.scripts]
sendpp1 = "sendpp1.core.main:cli"
sendpp1-gui = "sendpp1.gui.sendpp1:main"
sendpp1-tui = "sendpp1.tui.app:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
